fix align of social icons

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -51,6 +51,10 @@
   .social-icons {
     display: flex;
     flex-direction: column;
+
+    a {
+      text-align: center;
+    }
   }
 
   footer {
